currently working but without regions id part

--- a/templates/munros/new.html
+++ b/templates/munros/new.html
@@ -6,7 +6,7 @@
 <form action="/munros" method="POST">
     <div>
         <label for="name">Munro:</label>
-        <input type="text" id="name" name="munro">
+        <input type="text" id="name" name="name">
         <label for="name">Region:</label>
         <input type="text" id="name" name="region">
         <label for="name">Altitude:</label>
