--- a/templates/hikers/edit.html
+++ b/templates/hikers/edit.html
@@ -8,10 +8,10 @@
         <label for="first_name">First name:</label>
         <input type="text" id="first_name" name="first_name" value="{{ hiker.first_name }}">
     </div>
-    <div></div>
+    <div>
         <label for="last_name">Last name:</label>
         <input type="text" id="last_name" name="last_name" value="{{ hiker.last_name }}">
-        <input type="submit">
+        <input type="submit" value="Update">
     </div>
 </form>
 
