--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-This will be the home page. 
+<h3>Snufkin's diary is an app that allows munro baggers to record their hikes.</h3>
+
+
+
 
 {% endblock %}
