--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-    <title>Snufkin's Diary</title>
 </head>
 <body>
     <header>
         <h1>Snufkin's Diary</h1>
     </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="/home">Home</a>
+            </li>
+            <li>
+                <a href="/hikers">Hikers</a>
+            </li>
+            <li>
+                <a href="/munros">Munros</a>
+            </li>
+        </ul>
+    </nav>
     <div class="container">
         {% block content %}
 
