--- a/templates/munros/index.html
+++ b/templates/munros/index.html
@@ -5,9 +5,9 @@
 
 {% for munro in munros %}
     <section>
-        <p><a href="munros/{{ munro.id }}"><b>{{ munro.name }}</b></a>,
-            Region: {{ munro.region.name }},
-            Altitude: {{ munro.altitude }}
+        <p><a><b>{{ munro.name }}</b></a>,
+            <u>Region:</u> {{ munro.region.name }},
+        <u>Altitude:</u> {{ munro.altitude }} meters
         </p>
         <form action="/munros/{{ munro.id }}/delete" method="POST">
             <input type="submit" value="Delete">
